src/objects/FinServ__FinancialGoal__c.object
<CustomObject>
    <description>Tracks a client&apos;s goal.</description>
    <fields>
        <fullName>Annual_Growth_Rate__c</fullName>
        <formula>Associated_Account__r.FinServ__APY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Growth Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Associated Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>FinServ__FinancialAccount__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Scenario_Credit_Cards_Record_Type</value>
            </filterItems>
            <filterItems>
                <field>FinServ__FinancialAccount__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Scenario_Loans_Record_Type</value>
            </filterItems>
            <filterItems>
                <field>FinServ__FinancialAccount__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>LoanAccount</value>
            </filterItems>
            <filterItems>
                <field>FinServ__FinancialAccount__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>CreditCard</value>
            </filterItems>
            <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Financial Goals</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Goal_Amount__c</fullName>
        <label>Current Goal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Income__c</fullName>
        <label>Current Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Annual_Income_For_Retirement__c</fullName>
        <inlineHelpText>Desired Annual Income if you were to retire today in dollars.</inlineHelpText>
        <label>Desired Annual Income For Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_tax_benefits_realize_monthly__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do tax benefits realize monthly?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_contribution_bring_tax_benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does the contribution bring tax benefit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Inflation_Rate__c</fullName>
        <label>Expected Inflation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ActualValue__c</fullName>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this goal is associated with.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Goals</relationshipLabel>
        <relationshipName>HouseholdFinancialGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InitialValue__c</fullName>
        <label>Initial Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>IndustriesIndividual</value>
            </filterItems>
            <filterItems>
                <field>Account.FinServ__IndividualType__c</field>
                <operation>equals</operation>
                <value>Individual</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Financial Goals</relationshipLabel>
        <relationshipName>ClientFinancialGoals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__TargetValue__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_Priority_Number__c</fullName>
        <formula>VALUE(text(Goal_Priority__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Priority Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Priority__c</fullName>
        <label>Goal Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Priority 1 (must have)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Priority 2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Priority 3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_yearly_tax_deduction_allowed__c</fullName>
		<defaultValue>0</defaultValue>
        <label>Max yearly tax deduction allowed ($ )?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Of_Return_After_Retirement__c</fullName>
        <inlineHelpText>Rate of return after retirement(%)</inlineHelpText>
        <label>Rate Of Return After Retirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Monthly_Saving__c</fullName>
        <label>Required Monthly Saving</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_Age__c</fullName>
        <label>Retirement Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario_Goal_Type__c</fullName>
        <label>Scenario Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Wedding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Financial Goals</relationshipLabel>
        <relationshipName>Financial_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Value__c</fullName>
        <label>Start Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_of_contribution_bring_tax_benefit__c</fullName>
        <label>What % of contribution bring tax benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Years_Of_Living_After_Retirement__c</fullName>
        <label>Years Of Living After Retirement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Goal</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__PrimaryOwner__c</columns>
        <columns>Associated_Account__c</columns>
        <columns>Start_Value__c</columns>
        <columns>Start_Date__c</columns>
        <columns>FinServ__TargetValue__c</columns>
        <columns>FinServ__TargetDate__c</columns>
        <columns>Required_Monthly_Saving__c</columns>
        <columns>Scenario_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Financial_Goals</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>FinServ__FinancialGoal__c.Scenario_Goal_Record_Type</value>
        </filters>
        <label>Financial Goals</label>
    </listViews>
    <listViews>
        <fullName>Scenario_Financial_Goal</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinServ__FinancialGoal__c.Scenario_Goal_Record_Type</value>
        </filters>
        <label>Scenario Financial Goals</label>
    </listViews>
    <nameField>
        <label>Financial Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Goals</pluralLabel>
    <recordTypes>
        <fullName>CarRecordType</fullName>
        <active>true</active>
        <label>CarRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>EducationRecordType</fullName>
        <active>true</active>
        <label>EducationRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>HomeImprovementRecordType</fullName>
        <active>true</active>
        <label>HomeImprovementRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>HomeRecordType</fullName>
        <active>true</active>
        <label>HomeRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>OtherGoalsRecordType</fullName>
        <active>true</active>
        <label>OtherGoalsRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>RetirementRecordType</fullName>
        <active>true</active>
        <label>RetirementRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Goal_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Goal Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>VacationRecordType</fullName>
        <active>true</active>
        <label>VacationRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>WeddingRecordType</fullName>
        <active>true</active>
        <label>WeddingRecordType</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>